--- a/ChuckNorris/src/app/frasi/frasi.component.html
+++ b/ChuckNorris/src/app/frasi/frasi.component.html
@@ -1,13 +1,13 @@
 
 <<div style="padding: 13px;">
-    <mat-spinner *ngIf="frase.length === 0"></mat-spinner>
+    
 
-    <mat-card *ngFor="let fr of frase" style="margin-top:10px;">
+    
         <mat-card-header>
-            <mat-card-title>{{fr.categories}}</mat-card-title>
-            <mat-card-title>{{fr.id}}</mat-card-title>
-            <mat-card-title>{{fr.joke}}</mat-card-title>
+            <mat-card-title>{{frase.categories}}</mat-card-title>
+            <mat-card-title>{{frase.id}}</mat-card-title>
+            <mat-card-title>{{frase.joke}}</mat-card-title>
 
         </mat-card-header>
-    </mat-card>
+    
 </div>
