prima parte funzionante

--- a/ChuckNorris/src/app/categorie/categorie.component.html
+++ b/ChuckNorris/src/app/categorie/categorie.component.html
@@ -1,1 +1,10 @@
-<p>categorie works!</p>
+<<div style="padding: 20px;">
+    
+
+    
+        <mat-card-header>
+        <h2>Categorie:</h2>
+            <h2>{{ categ.value.categories }}</h2>
+        </mat-card-header>
+    
+</div>
